# agentape

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  example.py  pyproject.toml
agentape/: __init__.py  pytest_plugin.py
agentape/clients/: openai_client.py
agentape/core/: __init__.py  matching.py  recorder.py  replayer.py  tape.py
agentape/storage/: yaml_storage.py
scripts/: lint.sh  pre-commit.sh
tests/: test_matching.py  test_pytest_plugin.py  test_record_replay.py  test_tape.py  test_wrap.py
